# medguard

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  build.sh  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Medguard/config/: settings.py
Medguard/medicamento/: forms.py
config/: settings.py  settings.py.save  urls.py
docs/issues/: historico.md
medicamento/: admin.py  alterar-medicamento  apps.py  forms.py  models.py  test_bula_api.py  traducao.py  urls.py  views.py
medicamento/data/: medicamentos_pt_en.json
medicamento/migrations/: 0001_initial.py  0002_historicoevento.py
medicamento/templates/medicamento/: alertas.html  base.html  cadastrar.html  confirmar_exclusao.html  confirmar_uso.html  detalhe.html  historico.html  historico_clinico.html  index.html  listar.html
tests/: test_bula_api.py  test_models.py  test_traducao.py
